# ldc-demand-forecasting

./: README.md  main.ipynb  pyproject.toml
data/: demand_data.csv
src/: basis.py  metrics.py  model.py  scalers.py  utils.py
